# mcp-central

mcp_central/ace_music_gen/: .gitignore  README.md  gen_muslic.py  llm_chat_agent.py  main.py  package-lock.json  pyproject.toml  start_web.sh
mcp_central/ace_music_gen/ace_step_mcp/: __init__.py  __main__.py  server.py
mcp_central/ace_music_gen/outputs/: output_20250919225128_0_input_params.json
mcp_central/ace_music_gen/outputs/session_logs/: 20250919_183908_d8c7938e.json  20250919_184242_121de5bb.json  20250919_184548_4b0cc256.json  20250919_184821_6307cd6c.json  20250919_214149_01adf404.json
mcp_central/ace_music_gen/src/ace_music_gen/: __init__.py  agent_hooks.py  evaluator.py  generator.py  interactive_agent.py  llm_client.py  mcp_client.py  pinyin_helper.py  session_state.py
mcp_central/ace_music_gen/web/: README.md
mcp_central/ace_music_gen/web/backend/: __init__.py  api_server.py  state_tracker.py
mcp_central/ace_music_gen/web/backend/models/: __init__.py  requests.py  responses.py
mcp_central/ace_music_gen/web/backend/routes/: __init__.py  chat.py  media.py  session.py
mcp_central/ace_music_gen/web/frontend/: package-lock.json  package.json
mcp_central/ace_music_gen/web/frontend/src/app/: page.tsx
mcp_central/ace_music_gen/web/frontend/src/app/chat/[sessionId]/: page.tsx
mcp_central/ace_music_gen/web/frontend/src/stores/: session-store.ts
mcp_central/ace_music_gen/web/frontend/src/types/: api.ts  index.ts
